--- a/airport-ui/package.json
+++ b/airport-ui/package.json
@@ -14,7 +14,7 @@
         "react-i18next": "^11.11.1",
         "react-responsive": "^8.2.0",
         "react-scripts": "^4.0.3",
-        "use-http": "^1.0.21",
+        "axios": "^0.21.1",
         "web-vitals": "^2.1.0"
     },
     "scripts": {
