--- a/airport-backend/src/main/resources/application.yml
+++ b/airport-backend/src/main/resources/application.yml
@@ -1,5 +1,23 @@
 server:
   port: 8081
+  servlet:
+    context-path: /api
 spring:
+  servlet:
   application:
     name: airport-backend-service
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    jdbc-url: jdbc:mysql://localhost:3306/airport
+    username: root
+    password: password
+  jpa:
+    generate-ddl: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL5Dialect
+logging:
+  file:
+    name: airport.log
