--- a/airport-ui/package.json
+++ b/airport-ui/package.json
@@ -9,6 +9,7 @@
         "classnames": "^2.3.1",
         "customize-cra": "^1.0.0",
         "i18next": "^20.3.2",
+        "query-string": "^7.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-i18next": "^11.11.1",
