TASK5 - feign client impl -- fetch airport price from airport price service

--- a/airport-backend/src/main/resources/application.yml
+++ b/airport-backend/src/main/resources/application.yml
@@ -18,6 +18,13 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
+feign:
+  client:
+    config:
+      default:
+        connectTimeout: 5000
+        readTimeout: 5000
+        loggerLevel: full
 logging:
   file:
     name: airport.log
