--- a/airport-batch/src/main/resources/application.yml
+++ b/airport-batch/src/main/resources/application.yml
@@ -21,6 +21,9 @@ spring:
       jdbc-url: jdbc:mysql://localhost:3306/airport_batch
       username: root
       password: password
+      maximum-pool-size: 50
+      hikari:
+        maximum-pool-size: 50
   airport:
     datasource:
       type: com.zaxxer.hikari.HikariDataSource
@@ -28,6 +31,11 @@ spring:
       jdbc-url: jdbc:mysql://localhost:3306/airport
       username: root
       password: password
+      maximum-pool-size: 50
+      hikari:
+        maximum-pool-size: 50
 logging:
   file:
     name: airport-batch.log
+
+airport-price-service.url: http://localhost:8085
