--- a/airport-backend/src/main/resources/application.yml
+++ b/airport-backend/src/main/resources/application.yml
@@ -26,5 +26,9 @@ feign:
         readTimeout: 5000
         loggerLevel: full
 logging:
+  level:
+    org.springframework.web: DEBUG
+    ej.airport: DEBUG
+    org.hibernate.SQL: DEBUG
   file:
-    name: airport.log
+    name: /logs/airport.log
