TASK6 - set static nodejs version

--- a/airport-ui/Dockerfile
+++ b/airport-ui/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:latest
+FROM node:12.18.3
 
 RUN mkdir /airport-ui
 
@@ -9,8 +9,8 @@ ENV PATH /airport-ui/node_modules/.bin:$PATH
 COPY package.json /airport-ui
 COPY package-lock.json /airport-ui
 
-RUN npm install --silent
-RUN npm install react-scripts@3.4.1 -g --silent
+RUN npm install
+RUN npm install react-scripts@3.4.1 -g
 
 COPY . ./
 
